# PatternCpp

./: .gitignore  CMakeLists.txt
lib/mac/: libgest&libgtestmain.txt
src/main/Header/: AbstractFactory.h
src/main/Source/: AbstractFactory.cpp
src/test/: AbstractFactoryTest.cpp
